--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
+    "cookie-parser": "^1.3.5",
     "debug": "~2.2.0",
     "dotenv": "^1.2.0",
     "ejs": "~2.3.3",
